# tonal-flex

./: .gitignore  README.md  docker-compose.yml
core/: README.md  gen_proto.py  main.json  main.py  main_pb2.py  main_pb2_grpc.py  test.py
elk-os/: AUDIO.md  MIDI.md  README.md  WIFI.md
elk-os/elk-pi/: README.md
elk-os/elk-pi-main-app/: .gitignore  CMakeLists.txt  Dockerfile  README.md
elk-os/elk-pi-main-app/include/: sendConfigNames.h
elk-os/elk-pi-main-app/libs/: toolchain-aarch64.cmake
elk-os/elk-pi-main-app/proto/: main_app.grpc.pb.cc
elk-os/elk-pi-main-app/src/: main.cpp  sendConfigNames.cpp  server.cpp  sushiHandler.cpp
elk-os/elk-pi-main-app/x-compile/: Dockerfile  README.md
elk-os/elk-pi-sdk/: Dockerfile  README.md
elk-os/elk-pi/scripts/: download_image.sh  flash_linux.sh  flash_mac.sh
elk-os/elk-scripts/: flash-run.sh  run.sh
elk-os/elk-sushi/: README.md
elk-os/elk-sushi/scripts/: install_linux_x86.sh  install_mac_arm64.sh  install_mac_x86.sh
envoy/: README.md  docker-compose.yml  envoy.yaml
envoy-proxy/: envoy.yaml
envoy/scripts/: download-bin.sh  flash-envoy.sh
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.vue
frontend/src/components/: MainAppUI.vue  SushiUI.vue  VirtualSynth.vue  dashboardHeader.vue  sushiTracks.vue
frontend/src/proto/: main_app.client.ts
frontend/src/stores/: mainAppStore.ts  pluginStore.ts  sushiStore.ts  synthStore.ts
frontend/src/views/: AppDashboard.vue  LoadingScreen.vue
main-app/: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
main-app/config/: online_synth_ext_vst3.json  play_online_synth.json
main-app/envoy/: envoy.yml
main-app/include/: environmentUtils.h  server.h  startSushi.h  sushiHandler.h
main-app/plugins/TonalFlexReverb.vst3/Contents/Resources/: moduleinfo.json
main-app/proto/: main_app.grpc.pb.h  main_app.pb.cc  main_app.pb.h  main_app.proto
main-app/scripts/: start-sushi.sh  stop-sushi.sh
main-app/src/: environmentUtils.cpp  main.cpp  sendConfigNames.cpp  server.cpp  startSushi.cpp  sushiHandler.cpp
main-app/x-compile/: Dockerfile  README.md
plugins/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build-plugins.sh
plugins/plugin-reverb/: CMakeLists.txt
plugins/plugin-reverb/config/: tonalflex_reverb.json
plugins/plugin-reverb/include/plugin-reverb/: plugin_editor.h  plugin_processor.h
plugins/plugin-reverb/src/: plugin_editor.cpp  plugin_processor.cpp
plugins/plugin-template/: CMakeLists.txt
plugins/plugin-template/include/plugin-template/: plugin_editor.h
plugins/plugin-template/src/: PluginEditor.cpp  PluginProcessor.cpp  plugin_editor.cpp  plugin_processor.cpp
plugins/reverb/Builds/MacOSX/: Info-AU.plist
plugins/reverb/Builds/MacOSX/NewProject.xcodeproj/project.xcworkspace/xcuserdata/simonthorell.xcuserdatad/: UserInterfaceState.xcuserstate
plugins/reverb/Builds/MacOSX/NewProject.xcodeproj/xcuserdata/simonthorell.xcuserdatad/xcschemes/: xcschememanagement.plist
plugins/reverb/Builds/MacOSX/tonal-flex.xcodeproj/: project.pbxproj
plugins/reverb/Builds/MacOSX/tonal-flex.xcodeproj/project.xcworkspace/xcuserdata/simonthorell.xcuserdatad/: UserInterfaceState.xcuserstate
plugins/reverb/Builds/MacOSX/tonal-flex.xcodeproj/xcuserdata/simonthorell.xcuserdatad/xcschemes/: xcschememanagement.plist
plugins/reverb/JuceLibraryCode/: JucePluginDefines.h
plugins/reverb/reverb/: reverb.jucer
plugins/reverb/reverb/Builds/MacOSX/NewProject.xcodeproj/: project.pbxproj
plugins/test/: CMakeLists.txt
plugins/test/src/: AudioProcessorTest.cpp
plugins/utils/tone_generator/: README.md  tone_generator.cpp  tone_generator.h
